public enum Dir {
    LEFT,UP,RIGHT, DOWN;
}
