@startuml

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}
class frame {
size
paint()

}
enum Dir{
Left
Right
Up
Down
}
class Tank{
x
y
Dir
isMoving
move()
fire(frame)
}
class Bullet{
x
y
Dir
}

@enduml